feat: add insertProperty method to PropertyService and update PropertySubmissionService to handle property insertion